xboxdrv 0.6.2 - (??/???/????)
==============================

* added ability to do toggle buttons
* added ability to invert buttons
* added ability to send different events depending on how long a
  button was pressed


xboxdrv 0.6.1 - (21/Dec/2010)
==============================

* fixed bug in axis to key mapping
* removed debugging output


xboxdrv 0.6.0 - (18/Dec/2010)
==============================

* support for reading from evdev, this allows the use of regular
  regular PC joysticks or the Playstation 3 controllers with xboxdrv,
  useful if you need configurability or joy2key-like functionality,
  but don't have a Xbox360 gamepad
* added KEY_#num, ABS_#num and REL_#num to allow refering to events by
  number instead of name
* support for reading configuration from a INI configuration file
* cleaned up uinput mapping, --dpad-as-button, --dpad-only, etc. are now
  simple mappings instead of special case hackery
* --ui-axismap and --ui-buttonmap now work with all axis and button
* smooth deadzone handling without jumps 
* added --detach-kernel-driver
* automatically insert dummy events to make input device register as joystick
* added ability to have multiple configs running at the same time with --ui-new
* added shifting to --ui-axismap, allows sending of different events
  when a shift button is pressed
* Saitek Cyborg Rumble Pad support added
* Gamestop Xbox 360 Controller support added


xboxdrv 0.5.0 - (26/May/2010)
==============================

* added device_id handling to --ui-buttonmap and --ui-axismap, allows
  the creation of multiple input devices from a single controller
* added shifting to --ui-buttonmap, allows sending of different events
  when a shift button is pressed
* added support to send keyboard combination from --ui-buttonmap
* added --mouse, a simple shortcut to enable mouse emulation
* added dummy events to the mouse device to let it register properly
  by the kernel without messing with hal