@@ -27,6 +27,12 @@ $ dput my-ppa xboxdrv_0.6.1_source.changes
 Stuff to do before 0.6.1 release:
 =================================
 
+* AxisFilter: invert, sensitivy, deadzone, relative-axis
+
+* ButtonFilter: invert, autofire, toggle
+
+* Not implementable as they need more then one axis: squareaxis, four-way-restrictor, dpad-rotation
+
 * "couldn't convert 'ABS_y' to enum, not a member of EV_ABS"
  
   convert all enum names to uppercase? or does that lead to conflicts in the naming?
