@@ -5,6 +5,8 @@ xboxdrv 0.6.2 - (??/???/????)
 * added ability to invert buttons
 * added ability to send different events depending on how long a
   button was pressed
+* added generic event filters, replacing --sensitive-axis, --deadzone,
+  etc.
 
 
 xboxdrv 0.6.1 - (21/Dec/2010)
